--- a/templates/index.html
+++ b/templates/index.html
@@ -76,8 +76,8 @@
 
             var line = d3.svg.line()
                   .interpolate('basis')
-                  .x(function(d) { return x(d.date); })
-                  .y(function(d) { return y(d.y); });
+                  .x(function(d) { return x(parseDate(d.date)); })
+                  .y(function(d) { return y(+d.y); });
 
             var svg = d3.select("#results").append("svg")
                   .attr("width", width + margin.left + margin.right)
@@ -95,6 +95,8 @@
                 .attr("class", "x axis")
                 .attr("transform", "translate(0," + height + ")")
 
+            var color = d3.scale.category20b();
+
             svg.append("g")
                 .attr("class", "y axis")
                 .attr("y", 6)
@@ -103,19 +105,15 @@
                 .style("text-anchor", "end")
                 .append("text");
 
-            svg.append("path")
-               .attr("stroke", "steelblue")
-               .attr("stroke-width", "2")
-               .attr("fill", "none");
+            dataset = []
 
-            function drawGraph(data) {
+            function drawGraph(data, query) {
+                dataset.push(data)
 
-                data.forEach(function(d) {
-                    d.date = parseDate(d.date);
-                    d.y = +d.y;
-                })
+                var dataarray = []
+                dataarray = dataarray.concat.apply(dataarray, dataset)
 
-                y.domain(d3.extent(data, function(d) { return d.y; }));
+                y.domain(d3.extent(dataarray, function(d) { return +d.y; }));
 
                 svg.select(".x.axis")
                   .transition()
@@ -127,11 +125,19 @@
                   .duration(750)
                   .call(yAxis)
 
-                var path = svg.selectAll("path")
+                svg.selectAll("path").data(dataset, function(d) { return line(d); })
+                   .enter()
+                   .append("path")
+                   .attr("stroke", "hsl(" + Math.random() * 360 + ",100%,50%)")
+                   .attr("stroke-width", "2")
+                   .attr("fill", "none")
+                   .attr("d", function(d) { return line(d); });
+
+                svg.selectAll("path")
                    .transition()
                    .duration(750)
                    .ease("linear")
-                   .attr("d", line(data))
+                   .attr("d", function(d) { return line(d); })
             }  
 
             $(document).ready(function(){
@@ -148,7 +154,7 @@
                             dataType: "json",
                             success:function(data) {
                                 //redraw(data)
-                                drawGraph(data);
+                                drawGraph(data, query);
                                 $("#results").removeClass("loading");
                             },
                             error:function(){
